--- a/config/database.yml
+++ b/config/database.yml
@@ -27,8 +27,8 @@ test:
   reconnect: false
   database: Domination_test
   pool: 5
-  username: root
-  password:
+  username: management  
+  password: password
   socket: /tmp/mysql.sock
 
 production:
